# kronmult993

./: CMakeLists.txt  README.md
kronmult/: CMakeLists.txt
tests/: CMakeLists.txt  kronmult_bench.cpp  kronmult_fullbench.cpp  kronmult_fullbench_cpu.cpp  kronmult_fullbench_gpu.cpp
tests/utils/: batch_size.h
